Fri Feb  6 11:59:03 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/rpc.sql: fix rpc test

Fri Feb  6 11:10:35 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: remove file leak in unittests

Thu Feb  5 09:49:08 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/done_handling.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0016.c:
	* src/dblib/unittests/t0023.c:
	- remove warnings

Tue Feb  3 10:10:24 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0014.c: fix memory error

Sun Feb  1 17:15:49 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/common.h src/dblib/unittests/common.c
	* src/dblib/unittests/bcp.c src/dblib/unittests/dbmorecmds.c
	* src/dblib/unittests/done_handling.c src/dblib/unittests/rpc.c
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0002.c
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0008.c
	* src/dblib/unittests/t0009.c src/dblib/unittests/t0011.c
	* src/dblib/unittests/t0012.c src/dblib/unittests/t0013.c
	* src/dblib/unittests/t0014.c src/dblib/unittests/t0015.c
	* src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c
	* src/dblib/unittests/t0018.c src/dblib/unittests/t0020.c
	* src/dblib/unittests/t0021.c src/dblib/unittests/t0022.c
	* src/dblib/unittests/t0023.c
	* src/dblib/unittests/text_buffer.c src/dblib/unittests/timeout.c
	* src/dblib/unittests/bcp.sql src/dblib/unittests/dbmorecmds.sql
	* src/dblib/unittests/done_handling.sql src/dblib/unittests/rpc.sql
	* src/dblib/unittests/t0001.sql src/dblib/unittests/t0002.sql
	* src/dblib/unittests/t0003.sql src/dblib/unittests/t0004.sql
	* src/dblib/unittests/t0005.sql src/dblib/unittests/t0006.sql
	* src/dblib/unittests/t0007.sql src/dblib/unittests/t0009.sql