@@ -1,3 +1,6 @@
+Fri Feb  6 12:11:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/unittests/convert.c: fix convert test
+
 Fri Feb  6 11:59:03 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/unittests/rpc.sql: fix rpc test
 
@@ -1283,4 +1286,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2722 2009/02/06 10:59:28 freddy77 Exp $
+$Id: ChangeLog,v 1.2723 2009/02/06 11:12:01 freddy77 Exp $
